TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "134071859778832" [label="Start"];
  "134071859778832" -> "134071859777440";
  "134071859777440" [label="Code"];
  "134071859777440" -> "134071859777488";
  "134071859777488" [label="Function"];
  "134071859777488" -> "134071859781136";
  "134071859777488" -> "134071859777104";
  "134071859777488" -> "134071859778880";
  "134071859781136" [label="main"];
  "134071859777104" [label="Parameters"];
  "134071859778880" [label="Code"];
  "134071859778880" -> "134071859781952";
  "134071859778880" -> "134071859774224";
  "134071859778880" -> "134071859783008";
  "134071859781952" [label="Scope"];
  "134071859781952" -> "134071859778688";
  "134071859778688" [label="Declaration"];
  "134071859778688" -> "134071859774464";
  "134071859778688" -> "134071859780272";
  "134071859774464" [label="x"];
  "134071859780272" [label="1"];
  "134071859774224" [label="Scope"];
  "134071859774224" -> "134071859780656";
  "134071859780656" [label="Declaration"];
  "134071859780656" -> "134071859782048";
  "134071859780656" -> "134071859782720";
  "134071859782048" [label="x"];
  "134071859782720" [label="2"];
  "134071859783008" [label="Return"];
  "134071859783008" -> "134071859783728";
  "134071859783728" [label="0"];
}
